# inner_circl

./: main.py  pyproject.toml
assignment/: README.md
data_modelling/: data_aggregator.py  sql.ipynb  users.csv
recommender/: modelling.ipynb
