[project]
name = "inner-circle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "numpy<2.0",
    "surprise>=0.1",
    "scikit-learn>=1.0",
    "matplotlib>=3.0",
    "seaborn>=0.11",
    "torch>=2.7.1",
]
